Fixed alignment
Added text style option for blue text

--- a/content/src/main/content/jcr_root/etc/designs/phonegap/brucelefebvre/pgday-talk/clientlibsall/css/pgday.css
+++ b/content/src/main/content/jcr_root/etc/designs/phonegap/brucelefebvre/pgday-talk/clientlibsall/css/pgday.css
@@ -219,3 +219,7 @@ body:after {
 .reveal .strikethrough {
     text-decoration: line-through;
 }
+
+.reveal .blue {
+    color: blue;
+}
